fixed home button on mobile

--- a/src/components/layout/Header/header.scss
+++ b/src/components/layout/Header/header.scss
@@ -129,4 +129,7 @@
 		display: flex;
 		justify-content: center;
 	}
+	.home {
+		display: none;
+	}
 }
